- Book 2, sect238: Fixed bug with the "silver token" (semi-fixed, now you get 1 Gold Crown)
- Book 4, sect283: Fixed bug, drop Flask of Holy Water

1.10
- Book 9 and 10 available
- Brian Williams objects illustrations support
- Now map don't count for the 12 Special Items limit
- Added FAQ section
- Now Random Table is manual by default (more fun!)
- Book 6, sect259: Bug with disciplines. Divination should be Nexus
- Book 8, sect183 and sect47: Added message about the Paido's sword. Sword changed to count as zero items (be sure you always pick it).
- Fixed bug on link to the current PAON license
- Update combat state after any object is picked

1.11
 - Upgrade of books 1, 3, 4 and 6 to the latest version (erratas). Books 2 and 5 currently cannot be upgraded
 - Fixed bug with tinderbox on book4 / sect270
 - Fixed bug with meals: If the meal object has some effect, apply that effect when the object is eaten
 - Objects now can have a short / long description
 - Fixed bug with map zoom when device orientation is changed (wrong zoom)
 - Changed rendering of definitions lists (hard to read on small devices)
 - Fixed  bugs with the Crystal Star Pendant ("If you have **ever** been given a Crystal Star Pendant", not if you have it NOW)
 - Book 5, sect20: Fixed bug, stop combat after turn 3
 - Book 5, sect330: Fixed bug, stop combat after turn 2
 - Added privacy policy
 - New option on Action Chart to fight unarmed (can be useful on book 12)
 - Show message when current weapon is changed
 - Fixed horrible bug restarting the current book, from Settings or after a dead: The Kai Monastery objects were lost
 - Book 1, sect88: Spear is capitalized, thus you should be able to take and equip it as a normal weapon
 - Book 2, sect290: According to the text, you need to eat a meal from your backpack in this section
 - Book 5, sect166: You cannot use a Shield when afflicted by Limbdeath
 - Settings: Added option to start a new game