@@ -9,6 +9,7 @@
   inventario (incluida la antes mencionada Sommerswerd) ; simplemente 
   desaparecieron. Ya intenté cerrar la app y volverla a abrir e incluso 
   reiniciar el libro pero nada, arreglenlo y le doy 5 estrellas
+- FAQ: Add info about change the Random Table
 - Use latest version on PAON data on SVN (a fixed commit number)
   * Review upgrades to book 7+
 - Warn about permanent losses (toastr)
